// Prisma Schema for Chogiare Backend - Authentication & Authorization Only

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// Enums
enum UserRoleEnum {
  buyer
  seller
  admin
}

enum Language {
  vi
  en
}

// Core User Management - Authentication Tables
model User {
  id             Int     @id @default(autoincrement())
  email          String  @unique @db.VarChar(255)
  username       String? @unique @db.VarChar(50)
  hashedPassword String  @map("hashed_password") @db.VarChar(255)
  isVerified     Boolean @default(false) @map("is_verified")
  status         Boolean @default(true)
  language       String  @default("vi") @db.VarChar(10)
  createdAt      BigInt  @map("created_at")
  updatedAt      BigInt  @map("updated_at")

  // Relations
  sessions           Session[]
  emailVerifications EmailVerification[]
  passwordResets     PasswordReset[]
  userRoles          UserRole[]
  userInfo           UserInfo?

  @@index([email])
  @@index([username])
  @@map("users")
}

model Session {
  id           Int    @id @default(autoincrement())
  userId       Int    @map("user_id")
  refreshToken String @map("refresh_token") @db.VarChar(500)
  expiresAt    BigInt @map("expires_at")
  createdAt    BigInt @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([refreshToken])
  @@map("sessions")
}

model EmailVerification {
  id        Int    @id @default(autoincrement())
  userId    Int    @map("user_id")
  code      String @db.VarChar(10)
  expiresAt BigInt @map("expires_at")
  createdAt BigInt @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([code])
  @@map("email_verifications")
}

model PasswordReset {
  id         Int    @id @default(autoincrement())
  userId     Int    @map("user_id")
  resetToken String @map("reset_token") @db.VarChar(500)
  expiresAt  BigInt @map("expires_at")
  createdAt  BigInt @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([resetToken])
  @@map("password_resets")
}

model Role {
  id          Int     @id @default(autoincrement())
  name        String  @unique @db.VarChar(50)
  description String? @db.VarChar(500)
  createdAt   BigInt  @map("created_at")

  rolePermissions RolePermission[]
  userRoles       UserRole[]

  @@map("roles")
}

model Permission {
  id          Int     @id @default(autoincrement())
  name        String  @unique @db.VarChar(100)
  description String? @db.VarChar(500)
  createdAt   BigInt  @map("created_at")

  rolePermissions RolePermission[]

  @@map("permissions")
}

model RolePermission {
  roleId       Int @map("role_id")
  permissionId Int @map("permission_id")

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
  @@map("role_permissions")
}

model UserRole {
  userId Int @map("user_id")
  roleId Int @map("role_id")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
  @@map("user_roles")
}

model UserInfo {
  id          Int     @id @default(autoincrement())
  userId      Int     @unique @map("user_id")
  fullName    String? @map("full_name") @db.VarChar(255)
  avatarUrl   String? @map("avatar_url") @db.VarChar(500)
  gender      String? @db.VarChar(20)
  dateOfBirth String? @map("date_of_birth") @db.VarChar(10)
  phoneNumber String? @map("phone_number") @db.VarChar(20)
  address     String? @db.VarChar(500)
  country     String? @db.VarChar(100)
  createdAt   BigInt  @map("created_at")
  updatedAt   BigInt  @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_info")
}
