// Database Schema for ChogiaRe Backend - Authentication & Authorization Only

Enum user_role {
  "buyer"
  "seller"
  "admin"
}

Enum language {
  "vi"
  "en"
}

// Core User Management - Authentication Tables
Table Users {
  id int [pk]
  email text [unique, not null]
  username text [unique]
  hashed_password text [not null]
  is_verified boolean [default: false]
  status boolean [default: true]
  language text [default: 'vi']
  created_at int64 [not null]
  updated_at int64 [not null]
}

Table Sessions {
  id autoincrement [pk]
  user_id int [not null, ref: > Users.id]
  refresh_token text [not null]
  expires_at int64 [not null]
  created_at int64 [not null]
}

Table EmailVerifications {
  id autoincrement [pk]
  user_id int [not null, ref: > Users.id]
  code text [not null]
  expires_at int64 [not null]
  created_at int64 [not null]
}

Table PasswordResets {
  id autoincrement [pk]
  user_id int [not null, ref: > Users.id]
  reset_token text [not null]
  expires_at int64 [not null]
  created_at int64 [not null]
}

// Authorization Tables
Table Roles {
  id autoincrement [pk]
  name text [unique, not null]
  description text
  created_at int64 [not null]
}

Table Permissions {
  id autoincrement [pk]
  name text [unique, not null]
  description text
  created_at int64 [not null]
}

Table RolePermissions {
  role_id int [pk, ref: > Roles.id]
  permission_id int [pk, ref: > Permissions.id]
}

Table UserRoles {
  user_id int [pk, ref: > Users.id]
  role_id int [pk, ref: > Roles.id]
}

Table UserInfo {
  id autoincrement [pk]
  user_id int [unique, not null, ref: > Users.id]
  full_name text
  avatar_url text
  gender text
  date_of_birth text
  phone_number text
  address text
  country text
  created_at int64 [not null]
  updated_at int64 [not null]
}

// Indexes for better performance
TableIndexes {
  (Users.email) [name: 'idx_users_email']
  (Users.username) [name: 'idx_users_username']
  (Sessions.user_id) [name: 'idx_sessions_user_id']
  (Sessions.refresh_token) [name: 'idx_sessions_refresh_token']
  (EmailVerifications.user_id) [name: 'idx_email_verifications_user_id']
  (EmailVerifications.code) [name: 'idx_email_verifications_code']
  (PasswordResets.user_id) [name: 'idx_password_resets_user_id']
  (PasswordResets.reset_token) [name: 'idx_password_resets_reset_token']
}
